# cuda_programming

practice/: CMakeLists.txt
practice/include/: thread_example.hpp
practice/src/: thread_example.cpp
tutorials/cuda-cpp/notebooks/01.02-Execution-Spaces/: 01.02.02-Exercise-Annotate-Execution-Spaces.ipynb  01.02.03-Exercise-Changing-Execution-Space.ipynb  01.02.04-Exercise-Compute-Median-Temperature.ipynb
tutorials/cuda-cpp/notebooks/01.03-Extending-Algorithms/: 01.03.02-Exercise-Computing-Variance.ipynb
tutorials/cuda-cpp/notebooks/01.04-Vocabulary-Types/: 01.04.02-Exercise-mdspan.ipynb
tutorials/cuda-cpp/notebooks/01.05-Serial-vs-Parallel/: 01.05.02-Exercise-Segmented-Sum-Optimization.ipynb  01.05.03-Exercise-Segmented-Mean.ipynb
